feat: Implement theme switching and styling
Introduce a theme switching mechanism with dark, light, and oceanic modes. Update CSS variables to support theming and apply them to components. Add a Header component and integrate it into the App layout. Update ToneSelector and WritingStyleUploader to use theme-aware styling.

--- a/index.html
+++ b/index.html
@@ -1,15 +1,63 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="dark">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF--8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AI Keyboard</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
+      :root[data-theme='dark'] {
+        --bg-primary: #111827; /* gray-900 */
+        --bg-secondary: #1f2937; /* gray-800 */
+        --bg-tertiary: #374151; /* gray-700 */
+        --bg-interactive: #4b5563; /* gray-600 */
+        --text-primary: #f9fafb; /* gray-50 */
+        --text-secondary: #d1d5db; /* gray-300 */
+        --text-muted: #9ca3af; /* gray-400 */
+        --accent-primary: #06b6d4; /* cyan-500 */
+        --accent-secondary: #0891b2; /* cyan-600 */
+        --border-color: #374151; /* gray-700 */
+      }
+      :root[data-theme='light'] {
+        --bg-primary: #f9fafb; /* gray-50 */
+        --bg-secondary: #ffffff; /* white */
+        --bg-tertiary: #e5e7eb; /* gray-200 */
+        --bg-interactive: #d1d5db; /* gray-300 */
+        --text-primary: #111827; /* gray-900 */
+        --text-secondary: #374151; /* gray-700 */
+        --text-muted: #6b7280; /* gray-500 */
+        --accent-primary: #0891b2; /* cyan-600 */
+        --accent-secondary: #0e7490; /* cyan-700 */
+        --border-color: #d1d5db; /* gray-300 */
+      }
+       :root[data-theme='oceanic'] {
+        --bg-primary: #0f172a; /* slate-900 */
+        --bg-secondary: #1e293b; /* slate-800 */
+        --bg-tertiary: #334155; /* slate-700 */
+        --bg-interactive: #475569; /* slate-600 */
+        --text-primary: #f1f5f9; /* slate-100 */
+        --text-secondary: #cbd5e1; /* slate-300 */
+        --text-muted: #94a3b8; /* slate-400 */
+        --accent-primary: #22d3ee; /* cyan-400 */
+        --accent-secondary: #06b6d4; /* cyan-500 */
+        --border-color: #334155; /* slate-700 */
+      }
       body {
-        background-color: #111827; /* bg-gray-900 */
+        background-color: var(--bg-primary);
+        color: var(--text-primary);
         margin: 0;
         font-family: sans-serif;
+      }
+      /* Custom scrollbar for suggestions */
+      .suggestion-scrollbar::-webkit-scrollbar {
+        height: 4px;
+      }
+      .suggestion-scrollbar::-webkit-scrollbar-track {
+        background: transparent;
+      }
+      .suggestion-scrollbar::-webkit-scrollbar-thumb {
+        background-color: var(--bg-interactive);
+        border-radius: 20px;
       }
     </style>
   <script type="importmap">
